--- a/161012/02-real-02-ieee.tex
+++ b/161012/02-real-02-ieee.tex
@@ -3,48 +3,83 @@
 	\tableofcontents[currentsection,currentsubsection]
 \end{frame}
 
-\begin{frame}
-	Есть стандарт IEEE 754 для хранения и обработки вещественных чисел с плавающей запятой, который используется почти везде.
-	Там определено несколько типов данных с разными размерами мантисс и экспонент.
+\begin{frame}{Что такое IEEE 754}
+	\begin{itemize}
+		\item
+			IEEE 754 "--- это стандарт хранения и обработки вещественных чисел с плавающей запятой, который используется почти везде.
+		\item
+			Но не вообще везде.
+		\item
+			Определяет несколько типов данных с разными размерами мантисс и экспонент: single precision, double precision, и ещё несколько.
+		\item
+			Достаточно разумно определяет операции для всех аргументов и решает некоторые проблемы.
+		\item
+			Из-за этого сложнее, чем идея с предыдущих слайдов.
+		\item
+			Есть $\pm \infty$, есть \t{NaN} (Not a Number, получается при делении нуля на ноль).
+		\item
+			В Python используется double-precision (тип \t{float}).
+		\item
+			В C++/Java есть как single-precision (\t{float}), так и double-precision (\t{double}).
+	\end{itemize}
+\end{frame}
 
-	IEEE 754 сложнее предыдущих слайдов, чтобы выполнялись всякие полезные свойства и операции всегда были определены.
-	Например, есть $\pm \infty$ и \t{NaN} (Not a Number, получается при делении на ноль).
-	Разберём \textit{single-precision} (в C++/Java зовётся \t{float}; в Python под \t{float} используется \textit{double-precision}):
-
+\begin{frame}{Формат single-precision}
+	Основная масса "--- \textit{нормализованные числа}:
 	\begin{center}
-		\begin{tabular}{|r|c|c|c|}
-			\hline
-			Биты & 31 & 30-23 & 22-0 \\\hline
-			& знак ($s$) & экспонента ($e$) & мантисса ($m$) \\\hline
+		\begin{tabular}{c|c|c}
+			\multicolumn{3}{c}{Биты} \\
+			31 & 30-23 & 22-0 \\\hline
+			знак ($s$) & экспонента ($e$) & мантисса ($m$) \\
 		\end{tabular}
 	\end{center}
-	Если $s=0$, то число положительное, иначе отрицательное.
-	Экспонента хранится не в дополнительном коде, а со сдвигом на 127 (т.е. $\t{0000 0000}=-127$, а $\t{0111 1111}=0$)
-	и может принимать значения от $-127$ до $128$ (\textbf{не} от $-128$ до $127$).
-	Предполагается, что экспонента подобрана так, чтобы перед запятой был ровно один знак "--- единица.
-	А мантисса тогда хранит все остальные.
+	\begin{enumerate}
+		\item
+			Если $s=0$, то число положительное, иначе отрицательное.
+		\item
+			Предполагается, что экспонента подобрана так, чтобы перед запятой был ровно один знак "--- единица.
+		\item
+			Мантисса хранит все знаки \textit{строго после} этой единицы.
+		\item
+			Итоговая формула (для \textit{нормализованных} чисел):
+			\[ x = (-1)^s \cdot 2^{e-127} \cdot (1 + m \cdot 2^{-23}) \]
+	\end{enumerate}
+\end{frame}
 
-	Итоговая формула (для \textit{нормализованных} чисел):
-	\[
-		x = (-1)^s \cdot 2^{e-127} \cdot (1 + m \cdot 2^{-23})
-	\]
+\begin{frame}{Хранение экспоненты}
+	Экспонента хранится как беззнаковое число со сдвигом на 127:
+	\begin{center}
+		\begin{tabular}{r|l}
+			Двоичное представление & $e$ \\\hline
+			\t{0000 0000} & -127 \\
+			\t{0000 0001} & -126 \\
+			\vdots & \vdots \\
+			\t{0111 1110} & -1 \\
+			\t{0111 1111} & 0 \\
+			\t{1000 0000} & 1 \\
+			\vdots & \vdots \\
+			\t{1111 1110} & 127 \\
+			\t{1111 1111} & 128 \\
+		\end{tabular}
+	\end{center}
+	Обратите внимание, что отрезок чисел "--- от $-127$ до 128, а не от $-128$ до $127$ (как в дополнительном коде).
 \end{frame}
 
 \begin{frame}{Пример}
 	\[
 		x = -13.75_{10} = \frac{-220}{16} = -1101.110_2
 	\]
-	Подбираем экспоненту так, чтобы получилась единица:
+	Подбираем экспоненту так, чтобы слева получилась ровно одна единица:
 	\[
 		x = -1.\underbrace{101110_2}_{m'=92_{10}} \cdot 2^3 \quad e=3
 	\]
-	Так как в $m$ предполагается 23 значащих знака (а у нас только 6), надо дописать \textit{справа} нулей.
+	Так как в $m$ предполагается 23 значащих знака (а у нас в $m'$ только 6), надо дописать \textit{справа} нулей.
 	Итого:
 	\begin{center}
-		\begin{tabular}{|r|c|c|c|}
-			\hline
-			Биты & 31 & 30-23 & 22-0 \\\hline
-			& \t{1} & $\underbrace{\t{100 0001 0}}_{e+128}$ & $\underbrace{\textit{101 110}0 0000 0000 0000 0000}_{m}$ \\\hline
+		\begin{tabular}{c|c|c|c}
+			\multicolumn{3}{c}{Биты} \\
+			31 & 30-23 & 22-0 \\\hline
+			\t{1} & $\underbrace{\t{100~0001~0}}_{e+128}$ & $\underbrace{\t{\textbf{101~110}0~0000~0000~0000~0000}}_{m}$ \\
 		\end{tabular}
 	\end{center}	
 \end{frame}
