161012: finalize 02-real-02-ieee up to denormalized numbers

--- a/161012/02-real-02-ieee.tex
+++ b/161012/02-real-02-ieee.tex
@@ -84,7 +84,7 @@
 	\end{center}	
 \end{frame}
 
-\begin{frame}{Денормализованные числа}
+\begin{frame}{Проблемы с аксиомами}
 	Какое наименьшее нормализованное число можно представить в таком формате?
 	Очевидно, при минимальной экспоненте (-127) и мантиссе.
 	Тогда самые маленькие числа таковы:
@@ -92,36 +92,47 @@
 		x &= 2^{-127} \cdot 1 \\
 		y &= 2^{-127} \cdot (1 + 1 \cdot 2^{-23}) \\
 		z &= 2^{-127} \cdot (1 + 2 \cdot 2^{-23}) \\
-		& \vdots \\
+		& \text{посчитаем что-нибудь:} \\
+		y - x &= 2^{-127} \cdot (1 + 1 \cdot 2^{-23} - 1) = 2^{-127} \cdot 1 \cdot 2^{-23} = 2^{-150}
 	\end{align*}
-	Посчитаем что-нибудь:
-	\begin{align*}
-		x + y &= 2^{-127} \cdot (1 + 1 + 1 \cdot 2^{-23}) = \\
-		      &= 2^{-127} \cdot (2 + 1 \cdot 2^{-23}) = \\
-		      &= 2^{-126} \cdot (1 + 1 \cdot 2^{-24}) \approx \\
-		      &\approx 2^{-126} \cdot 1 \\
-		y - x &= 2^{-127} \cdot (1 + 1 \cdot 2^{-23} - 1) = \\
-		      &= 2^{-127} \cdot 1 \cdot 2^{-23} = 2^{-150}
-	\end{align*}
-	Округлять к $2^{-127}$ странно (и тогда бы получили, что $x-y=x$, но $x\neq x + y$).
-	Округлять к нулю тоже странно: $x \neq y$, но $x - y = 0$.
+	Вопрос: как хранить $2^{-150}$?
+	\begin{itemize}
+		\item
+			Округлять к $2^{-127}$ странно: это далеко; тогда бы получили, что $x-y=x$, но $x\neq x + y$.
+		\item
+			Округлять к нулю тоже странно: $x \neq y$, но $x - y = 0$.
+	\end{itemize}
+\end{frame}
 
-	Так что вблизи нуля добавили \textit{денормализованные числа}, чтобы повысить точность и избежать таких проблем (ведь компилятор-то хочет оптимизировать).
-	Тогда эта проблема исчезает.
-
-	Хотя всё равно можно получить underflow: \t{2 ** (-1074) / 2 * 2}.
+\begin{frame}[fragile]{Денормализованные числа}
+	\begin{itemize}
+		\item 
+			Вблизи нуля добавили \textit{денормализованные числа}, чтобы повысить точность и избежать подобных проблем с аксиомами.
+		\item
+			Теперь стандарт гарантирует, что $x - y = 0 \iff x = y$.
+		\item
+			Денормализованное число "--- это число с минимально возможной экспонентой, у которого отсутствует единица перед запятой.
+		\item
+			Получаем, что это просто $2^{23}$ чисел равномерно распределённых от 0 до 1.
+		\item
+			Всё равно можно получить underflow:
+\begin{minted}{python}
+x=2**(-1074)
+print(x, x / 2 * 2)
+\end{minted}
+	\end{itemize}
 \end{frame}
 
 \begin{frame}{Формат}
 	Скажем, что если экспонента состоит из нулей, то у нас денормализованное число:
 	\begin{center}
 		\begin{tabular}{|r|c|c|c|}
-			\hline
-			Биты & 31 & 30-23 & 22-0 \\\hline
-			Тип & знак ($s$) & нули & мантисса $m$ \\\hline
+			\multicolumn{3}{c}{Биты} \\
+			31 & 30-23 & 22-0 \\\hline
+			знак ($s$) & нули & мантисса $m$ \\
 		\end{tabular}
 	\end{center}
-	Тут мы уже считаем, что мантисса записана целиком, с учётом старшей единицы.
+	Тут мы уже считаем, что мантисса записана целиком, включая старшую единицу.
 	Формула:
 	\[
 		x = (-1)^s \cdot 2^{-12\textbf{6}} \cdot m \cdot 2^{-23}
@@ -130,7 +141,7 @@
 	\[
 		2^{-126} \cdot 2^{-23} \le x \le 2^{-126} \cdot (2^{23}-1) \cdot2^{-23}
 	\]
-	А нормализованные (так как экспонента из нулей, т.е. $-127$, убита):
+	А нормализованные "--- в таком:
 	\[
 		2^{-126} \cdot 1 \le x
 	\]
