161012: finalize 02-real-02-ieee

--- a/161012/02-real-02-ieee.tex
+++ b/161012/02-real-02-ieee.tex
@@ -154,21 +154,31 @@ print(x, x / 2 * 2)
 \end{frame}
 
 \begin{frame}{Все особенности IEEE-754}
-	Нормализованных чисел с экспонентой $-127$ не существует "--- это будут \textit{денормализованные} числа (см. следующий слайд).
-	Есть два нуля "--- по одному с каждым знаком (попробуйте их сравнить в Python, а потом на C++ на них поделить).
-	Сделано для некой внутренней консистентности.
-
-	Нормализованных чисел с экспонентой $128$ не существует "--- это будут либо $+\infty$, либо NaN (not a number).
-	Если мантисса из нулей "--- то бесконечность (в зависимости от знака), если есть хоть один не-ноль "--- NaN.
+	Числа, доступные в IEEE 754 одинарной точности:
 	\begin{center}
 		\begin{tabular}{|r|c|c|c|c|}
-			\hline
-			Биты & 31 & 30-23 & 22-0 & Значение \\\hline
-			& \t{0} & \t{111 1111 1} & \t{000 0000 0000 0000 0000 0000} & $+\infty $\\\hline
-			& \t{1} & \t{111 1111 1} & \t{000 0000 0000 0000 0000 0000} & $-\infty $\\\hline
-			& \t{0} & \t{111 1111 1} & \t{000 1000 0110 0000 0000 0000} & \t{NaN} \\\hline
-			& \t{0} & \t{000 0000 0} & \t{000 0000 0000 0000 0000 0000} & $+0$ \\\hline
-			& \t{0} & \t{000 0000 0} & \t{000 0000 0000 0000 0000 0000} & $-0$ \\\hline
+			\multicolumn{3}{c}{Биты} & \\
+			31 & 30-23 & 22-0 & Значение \\\hline
+			\t{0} & \t{111 1111 1} & \t{000 0000 0000 0000 0000 0000} & $+\infty $\\
+			\t{1} & \t{111 1111 1} & \t{000 0000 0000 0000 0000 0000} & $-\infty $\\
+			\t{0} & \t{111 1111 1} & не нули                          & \t{NaN} \\
+			\t{0} & \t{000 0000 0} & \t{000 0000 0000 0000 0000 0000} & $+0$ \\
+			\t{1} & \t{000 0000 0} & \t{000 0000 0000 0000 0000 0000} & $-0$ \\
+			\t{?} & \t{000 0000 0} & не нули                          & д. число \\
+			\t{?} & что угодно     & что угодно                       & н. число \\
 		\end{tabular}
 	\end{center}	
+\end{frame}
+
+\begin{frame}{Упражнение}
+	\begin{enumerate}
+		\item
+			Составьте таблицу сравнения для \t{0}, \t{+0}, \t{-0} на Python: кто кому равен, кто кого меньше.
+		\item
+			Добавьте в эту таблицу сравнения \t{NaN}.
+		\item
+			На C++/Python составьте таблицу уможнения для $\pm0$, $\pm 1$, $\pm \infty$ и \t{NaN}.
+		\item
+			На C++ составьте таблицу деления для этих же чисел (на Python некоторые операции вызывают исключение
+	\end{enumerate}
 \end{frame}
