--- a/161012/02-real-03-practice.tex
+++ b/161012/02-real-03-practice.tex
@@ -13,8 +13,11 @@ for a in [2.0 ** x for x in [10, 20, 40, 60, 1000]]:
 
 	Складывать/вычитать числа разных порядков "--- плохо.
 	Сильно теряется точность.
+\begin{minted}{python}
+print(1000 + 1e100 - 1e100)
+print(1e100 + 1000 - 1000)
+\end{minted}
 	Одного порядка "--- нормально.
-
 \end{frame}
 
 \begin{frame}[fragile]{Ошибка может копиться}
@@ -27,32 +30,34 @@ for _ in range(10):
     shuffle(a)
     print(format(sum(a), ".20e"))
 \end{minted}
-	Так как результаты округляются на каждом шаге, результат может зависеть от порядка вычислений, размеров чисел и фазы луны.
-
-	Пример "--- метод Гаусса (подробнее расскажут на алгоритмах) решения систем.
-	Уже для матриц $15 \times 15$ можно подобрать матрицу, на которой точность теряется катастрофически быстро.
-
-	А вот с одним порядком:
-\begin{minted}{python}
-from random import randrange, shuffle
-a=[randrange(1000000000) * 2 ** 100 for _ in range(0, 200)]
-print(format(sum(a), ".20e"))  # Точный результат
-a = list(map(float, a))
-for _ in range(10):
-    shuffle(a)
-    print(format(sum(a), ".20e"))
-\end{minted}
+	\begin{itemize}
+		\item
+			Так как результаты округляются на каждом шаге, результат может зависеть от порядка вычислений, размеров чисел и фазы луны.
+		\item
+			Пример, где всё может быть плохо "--- метод Гаусса решения систем линейных уравнений (подробнее расскажут на алгоритмах).
+		\item
+			Уже для системы $15 \times 15$ можно подобрать матрицу, на которой точность теряется катастрофически быстро.
+	\end{itemize}
 \end{frame}
 
 \begin{frame}{Оптимизатор}
-	\includegraphics[scale=0.5]{optimizer-game.jpg}
+	\begin{center}
+		\includegraphics[scale=0.4]{optimizer-game.jpg}
+	\end{center}
 \end{frame}
 
 \begin{frame}{Оптимизатор}
-	Часто процессор поддерживает числа большего размера, чем double-precision.
-	Тогда точность может в некоторых местах случайно возрастать, а оптимизатор об этом не догадывается.
-	Например, <<побитово равные>> числа могут \href{http://codeforces.com/blog/entry/1059}{оказаться различными} "--- в одном месте сравнили куски памяти,
-	а в других местах "--- лежащие в процессоре числа.
+	\begin{itemize}
+		\item
+			Часто процессор поддерживает числа большего размера, чем double-precision.
+		\item
+			Тогда точность может в некоторых местах случайно возрастать, а оптимизатор об этом не догадывается.
+		\item
+			Из-за этого <<побитово равные>> числа могут \href{http://codeforces.com/blog/entry/1059}{оказаться различными}:
+			в одном месте сравнили куски памяти, а в других местах "--- лежащие в процессоре числа большей точности.
+		\item
+			Аналогично, можно случайно (не) увидеть какую-то маленькую погрешность.
+	\end{itemize}
 \end{frame}
 
 \begin{frame}[fragile]{Десятичные дроби неточны}
@@ -72,27 +77,46 @@ for n in [1000, 1024]:
 \end{frame}
 
 \begin{frame}{Что делать?}
-	Не использовать вещественные числа как можно больше.
-	Особенно на контестах.
-	Особенно у Серёжи.
+	\begin{itemize}
+		\item
+			Не использовать вещественные числа.
+		\item
+			Особенно на контестах.
+		\item
+			Особенно у Серёжи.
+		\item
+			Если очень надо "--- готовиться к неточности и допускать погрешность при \textit{любых} сравнениях (см. оптимизатор):
+			\begin{center}
+				\begin{tabular}{c|c}
+					Было & Стало \\\hline
+					\t{a == b} & \t{abs(a - b) < eps} \\
+					\t{a <= b} & \t{a <= b + eps}  \\
+					\t{a < b} & \t{a < b - eps} \\
+				\end{tabular}
+			\end{center}
+			Тут мы считаем, что числа равны, если отличаются не более, чем на \t{eps}.
+		\item
+			Следить за порядком операций и избегать сложения/вычитания чисел разного порядка.
+		\item
+			Иногда можно преобразовывать формулы: $x^2-y^2=(x-y)(x+y)$.
+	\end{itemize}
+\end{frame}
 
-	Если очень надо "--- готовиться к неточности и допускать погрешность при \textit{любых} сравнениях (см. оптимизатор):
-	\begin{center}
-		\begin{tabular}{|c|c|}
-			\hline
-			Было & Стало \\\hline
-			\t{a == b} & \t{abs(a - b) < eps} \\\hline
-			\t{a <= b} & \t{a <= b + eps}  \\\hline
-			\t{a < b} & \t{a < b - eps} \\\hline
-		\end{tabular}
-	\end{center}
-	Тут мы считаем, что числа равны, если отличаются не более, чем на \t{eps}.
-	Можно ещё более аккуратно, если смотреть на относительную погрешность, а не абсолютную.
-
-	Подбор \t{eps} и правильного порядка операций "--- отдельное искусство, обычно на контестах берут от $10^{-5}$ до $10^{-15}$; мой любимый "--- $10^{-8}$.
-	При желании может строго теоретически обосновать.
-
-	Например, вместо $x^2-y^2$ считается, что лучше использовать $(x-y)(x+y)$.
+\begin{frame}{Замечания про сравнения}
+	\begin{itemize}
+		\item
+			Можно сравнивать числа ещё аккуратнее, если смотреть на относительную погрешность, а не абсолютную.
+			Или если надо сравнивать в программе и большие числа, и маленькие.
+		\item
+			Подбор \t{eps} и правильного порядка операций "--- отдельное искусство.
+		\item
+			Обычно на контестах берут \t{eps} от $10^{-5}$ до $10^{-15}$; мой любимый "--- $10^{-8}$.
+		\item
+			При желании может строго теоретически обосновать правильный \t{eps}.
+		\item
+			\pause
+			Да и неправильный тоже :(
+	\end{itemize}
 \end{frame}
 
 \begin{frame}[fragile]{Странные вычисления}
@@ -108,5 +132,6 @@ print(float('nan') == float('nan'))
 \end{minted}
 	В C++ его ещё можно получить, взяв корень из отрицательного числа или $\frac{0}{0}$ (Python может кинуть исключение).
 
-	Когда извлекаете корень, не извлеките его случайно из \t{-eps}, стоит писать \t{sqrt(max(x, 0))}.
+	Лайфхак: когда извлекаете корень, не извлеките его случайно из \t{-eps}.
+	Для этого стоит писать \t{sqrt(max(x, 0))}, если $x$ может быть близок к нулю.
 \end{frame}
