--- a/161012/02-real-04-round.tex
+++ b/161012/02-real-04-round.tex
@@ -4,12 +4,6 @@
 	\tableofcontents[currentsection,currentsubsection]
 \end{frame}
 
-\begin{frame}
-	Стандарт требует, что результат любой операции должен быть максимально точен, а округление должно быть до ближайшего числа.
-	При этом округлять $\frac{1}{2}$ всегда вверх нехорошо "--- ошибка будет сильно накапливаться.
-	Поэтому округляют до ближайшего чётного (<<банковское>> округление).
-\end{frame}
-
 \begin{frame}{Ручное округление}
 	Самые популярные:
 	\begin{center}
@@ -32,17 +26,23 @@
 	\end{center}
 \end{frame}
 
-\begin{frame}[fragile]{Погрешность при округлении}
-	Будьте осторожны, округление не знает про погрешность вычислений:
+\begin{frame}[fragile]{Последние замечания}
+	\begin{itemize}
+		\item
+			Стандарт требует, что результат любой операции должен быть максимально точен, а округление должно быть до ближайшего числа.
+		\item
+			При этом округлять $\frac{1}{2}$ всегда вверх нехорошо "--- ошибка будет сильно накапливаться.
+		\item
+			Поэтому округляют до ближайшего чётного (<<банковское>> округление).
+		\item
+			Округление не знает про погрешность вычислений:
 \begin{minted}{python}
 from math import ceil
 print(ceil(1))                  # 1
 print(ceil(1.000000000000001))  # 2
 \end{minted}
 	Поэтому на практике, если могло получиться число, близкое к целому, лучше использовать \t{round} или добавлять \t{eps}.
-
-	Упражнение: как именно добавлять?
-
-	Не используйте типы с плавающей точкой для хранения количества денег или чего-то подобного, что требует точности при рассчётах.
-	Вам может быть удобно, но ошибки округления "--- не то, что хочется банку.
+		\item
+			Не используйте типы с плавающей точкой для хранения количества денег или чего-то подобного, что требует точности при рассчётах.
+	\end{itemize}
 \end{frame}
