161012: 01-int: add some formatting

--- a/161012/01-int-01-intro.tex
+++ b/161012/01-int-01-intro.tex
@@ -21,7 +21,7 @@
 \begin{frame}{Играем в игру}
 	Чему соответствует бинарная запись в таблице ниже?
 
-	Используйте калькулятор или Python (\t{0b0100}, \t{int('1111', 2)}).
+	Используйте калькулятор или Python: \t{0b0100} и \t{int('1111', 2)}.
 	\begin{center}
 		\pause
 		\begin{tabular}{|c|c|}
@@ -33,7 +33,8 @@
 			\t{0011 0000} & \pause '0' \\\hline\noalign{\pause}
 			\t{1100 0011} & \pause \t{0xC3} \\\hline\noalign{\pause}
 			\t{1100 0011} & \pause \t{ret} \\\hline\noalign{\pause}
-			\t{0110 1000} & \pause 22 \\\hline
+			\t{0110 1000} & \pause 22 \\
+			\hline
 		\end{tabular}
 		\pause
 	\end{center}
