--- a/161012/01-int-03-sign.tex
+++ b/161012/01-int-03-sign.tex
@@ -16,10 +16,13 @@
 
 	А можно сказать, что, $-x$ по определению "--- это такое $y$, что $x+y=0$.
 
-	Тогда вспоминаем, что мы уже живём по модулю 256:
+	Тогда вспоминаем, что мы уже живём по модулю 256 (проверьте вычисления в Python самостоятельно!):
 	\begin{align*}
 		x &= x + 256 &\mod 256 \\
-		-56 &= -56 + 200 = 200 &\mod 256
+		-56 &= -56 + 256 = 200 &\mod 256 \\
+		-56 + 56 &= -56 + 256 + 56 = 256 = 0 &\mod 256 \\
+		-17 \cdot 22 &= -374 = 138 &\mod 256 \\
+		-17 \cdot 22 &= (256 - 17) \cdot 22 = 239 \cdot 22 = 5258 = 128 &\mod 256
 	\end{align*}
 \end{frame}
 
@@ -79,7 +82,8 @@
 			-1 & \pause \t{1111 1111} \\\hline\noalign{\pause}
 			-128 & \pause \t{1000 0000} \\\hline\noalign{\pause}
 			127 & \pause \t{0111 1111} \\\hline\noalign{\pause}
-			128 & \pause никак \\\hline
+			128 & \pause никак \\
+			\hline
 		\end{tabular}
 		\pause
 	\end{center}
