--- a/161012/01-int-04-order.tex
+++ b/161012/01-int-04-order.tex
@@ -11,12 +11,13 @@
 
 	\begin{center}
 		\pause
-		\begin{tabular}{|c|c|c|c|c|c|c|}
+		\begin{tabular}{|c|c|c|c|l|}
 			\hline
-			\multicolumn{4}{|c|}{Адрес} & \\\hline
-			 & 2 & 3 & & Значение \\\hline
-			\dots & \t{0000 0001} & \t{0000 0011} & \dots & \pause 259 \\\hline\noalign{\pause}
-			\dots & \t{0000 0001} & \t{0000 0011} & \dots & \pause 769 \\\hline
+			\multicolumn{4}{|c|}{Адрес} & Значение \\
+			 & 2 & 3 & & \\\hline
+			\dots & \t{0000 0001} & \t{0000 0011} & \dots & \pause 259 \\\noalign{\pause}
+			\dots & \t{0000 0001} & \t{0000 0011} & \dots & \pause 769 \\
+			\hline
 		\end{tabular}
 		\pause
 	\end{center}
@@ -49,21 +50,23 @@
 	Младший байт имеет больший адрес.
 	Читается просто:
 	\begin{center}
-		\begin{tabular}{|c|c|c|c|c|c|c|}
+		\begin{tabular}{|c|c|c|c|l|}
 			\hline
-			\multicolumn{4}{|c|}{Адрес} & \\\hline
-			& 2 & 3 & & Значение \\\hline
-			\dots & \t{0000 0001} & \t{0000 0011} & \dots & $\t{0000~00\textbf{01}~0000~00\textbf{11}}_2=769_{10}$ \\\hline
+			\multicolumn{4}{|c|}{Адрес} & Значение \\
+			& 2 & 3 & & \\\hline
+			\dots & \t{0000 0001} & \t{0000 0011} & \dots & $\t{0000~00\textbf{01}~0000~00\textbf{11}}_2=769_{10}$ \\
+			\hline
 		\end{tabular}
 	\end{center}
 
 	Надо очень аккуратно помнить адрес и размер числа:
 	\begin{center}
-		\begin{tabular}{|c|c|c|c|c|c|c|}
+		\begin{tabular}{|c|c|c|l|}
 			\hline
-			\multicolumn{3}{|c|}{Адрес} & \\\hline
-			& 2 & & Значение \\\hline
-			\dots & \t{0000 0001} & \dots & $\t{0000 0001}_2=1_{10}$ \\\hline
+			\multicolumn{3}{|c|}{Адрес} & Значение \\
+			& 2 & & \\\hline
+			\dots & \t{0000 0001} & \dots & $\t{0000 0001}_2=1_{10}$ \\
+			\hline
 		\end{tabular}
 	\end{center}
 \end{frame}
@@ -73,20 +76,22 @@
 
 	Читается хуже:
 	\begin{center}
-		\begin{tabular}{|c|c|c|c|c|c|c|}
+		\begin{tabular}{|c|c|c|c|l|}
 			\hline
-			\multicolumn{4}{|c|}{Адрес} & \\\hline
-			& 2 & 3 & & Значение \\\hline
-			\dots & \t{0000 0001} & \t{0000 0011} & \dots & $\t{0000~00\textbf{11}~0000~00\textbf{01}}_2=259_{10}$ \\\hline
+			\multicolumn{4}{|c|}{Адрес} & Значение \\
+			& 2 & 3 & & \\\hline
+			\dots & \t{0000 0001} & \t{0000 0011} & \dots & $\t{0000~00\textbf{11}~0000~00\textbf{01}}_2=259_{10}$ \\
+			\hline
 		\end{tabular}
 	\end{center}
 	Если только мы не Intel и не пишем к этому документацию:
 	\begin{center}
-		\begin{tabular}{|c|c|c|c|c|c|c|}
+		\begin{tabular}{|c|c|c|c|l|}
 			\hline
-			\multicolumn{4}{|c|}{Адрес} & \\\hline
-			& \textbf{3} & \textbf{2} & & Значение \\\hline
-			\dots & \t{0000 0011} & \t{0000 0001} & \dots & $\t{0000~0011~0000~0001}_2=259_{10}$ \\\hline
+			\multicolumn{4}{|c|}{Адрес} & Значение \\
+			& \textbf{3} & \textbf{2} & & \\\hline
+			\dots & \t{0000 0011} & \t{0000 0001} & \dots & $\t{0000~0011~0000~0001}_2=259_{10}$ \\
+			\hline
 		\end{tabular}
 	\end{center}
 	Они у себя всё пишут от старших к младшим: байты с меньшими адресами справа, младшие биты справа.
@@ -95,39 +100,44 @@
 \begin{frame}{Особенности Little-endian-1}
 	Можно почти безболезненно конвертировать между типами:
 	\begin{center}
-		\begin{tabular}{|c|c|c|c|c|c|c|}
+		\begin{tabular}{|c|c|c|c|l|l|}
 			\hline
-			\multicolumn{4}{|c|}{Адрес} & \\\hline
-			& 2 & 3 & & Значение \\\hline
-			\dots & \t{0000 0011} & \t{0000 0001} & \dots & $\t{0000~00\textbf{11}~0000~00\textbf{01}}_2=259_{10}$ \\\hline
-			\dots & \t{0000 0011} & \dots         & \dots & $\t{0000~0011}_2=3_{10}=259_{10}$ \\\hline
-			\dots & \t{0000 0101} & \t{0000 0000} & \dots & $\t{0000~0000~0000~0001}_2=5_{10}$ \\\hline
-			\dots & \t{0000 0101} & \dots         & \dots & $\t{0000~0001}_2=5_{10}$ \\\hline
-			\dots & \t{1111 0011} & \t{0000 0000} & \dots & $\t{0000~0000 1111 0011}_2=123_{10}$ \\\hline
-			\dots & \t{1111 0011} & \dots         & \dots & $\t{1111~0011}_2=123_{10}$ \\\hline
-			\dots & \t{1111 0011} & \dots         & \dots & $\t{1111~0011}_2=-133_{10}$ \\\hline
-			\dots & \t{1111 0011} & \t{1111 1111} & \dots & $\t{1111~1111~1111~0011}_2=-133_{10}$ \\\hline
+			\multicolumn{4}{|c|}{Адрес} & \multicolumn{2}{|c|}{Значение} \\
+			& 2 & 3 & & & \\\hline
+			\dots & \t{0000 0011} & \t{0000 0001} & \dots & $\t{0000~0011~0000~0001}_2$ & $259_{10}$ \\
+			\dots & \t{0000 0011} & \dots         & \dots & $\t{0000~0011}_2$           & $3_{10}$ \\
+			\dots & \t{0000 0101} & \t{0000 0000} & \dots & $\t{0000~0000~0000~0001}_2$ & $5_{10}$ \\
+			\dots & \t{0000 0101} & \dots         & \dots & $\t{0000~0001}_2$           & $5_{10}$ \\
+			\dots & \t{1111 0011} & \t{0000 0000} & \dots & $\t{0000~0000 1111 0011}_2$ & $123_{10}$ \\
+			\dots & \t{1111 0011} & \dots         & \dots & $\t{1111~0011}_2$           & $123_{10}$ \\
+			\dots & \t{1111 0011} & \dots         & \dots & $\t{1111~0011}_2$           & $-133_{10}$ \\
+			\dots & \t{1111 0011} & \t{1111 1111} & \dots & $\t{1111~1111~1111~0011}_2$ & $-133_{10}$ \\
+			\hline
 		\end{tabular}
 	\end{center}
 \end{frame}
 
-\begin{frame}{Особенности Little-endian-2}
+\begin{frame}[t]{Особенности Little-endian-2}
 	\begin{itemize}
 		\item
 			Есть проблема со знаком, если мы переходим от меньшего типа к большему.
 		\item
 			Надо \textit{расширять знак}, если у нас было знаковое число:
 			заполнять старшие байты либо нулями, либо единицами (в зависимости от\only<1>{...}\only<2->{ старшего бита в числе}).
+	\only<3->{
 		\item
 			Если число было беззнаковое, то надо старший байт заполнить нулями.
+	}
 	\end{itemize}
 
+	\only<3->{
 	Компиляторы низкоуровневых языков делают это автоматически, когда вы делаете какие-то присваивания.
 	Разумеется, надо аккуратно следить за типами, иначе не сделают.
 
 	Замечание: иногда, несмотря на тип \t{int}, какие-то функции могут ожидать в нём на самом деле не число,
 	а набор байт в определённом порядке.
 	Яркий пример "--- номер порта в работе с сетью на C, функция \t{htons} "--- это оно.
+	}
 \end{frame}
 
 \begin{frame}{Резюме}
