--- a/161012/02-real-04-round.tex
+++ b/161012/02-real-04-round.tex
@@ -10,18 +10,19 @@
 		\begin{tabular}{|c|c|c|c|c|}
 			\hline
 			\t{x} & \t{floor(x)} & \t{round(x)} & \t{ceil(x)} & \t{int(x) } \\\hline
-			-1.6 & -2 & -2 & -1 & -1 \\\hline
-			-1.5 & -2 & -2 & -1 & -1 \\\hline
-			-1.4 & -2 & -1 & -1 & -1 \\\hline
-			-0.6 & -1 & -1 & 0 & 0 \\\hline
-			-0.5 & -1 & 0 & 0 & 0 \\\hline
-			-0.4 & -1 & 0 & 0 & 0 \\\hline
-			0.4 & 0 & 0 & 1 & 0 \\\hline
-			0.5 & 0 & 0 & 1 & 0 \\\hline
-			0.6 & 0 & 1 & 1 & 0 \\\hline
-			1.4 & 1 & 1 & 2 & 1 \\\hline
-			1.5 & 1 & 2 & 2 & 1 \\\hline
-			1.6 & 1 & 2 & 2 & 1 \\\hline
+			-1.6 & -2 & -2 & -1 & -1 \\
+			-1.5 & -2 & -2 & -1 & -1 \\
+			-1.4 & -2 & -1 & -1 & -1 \\
+			-0.6 & -1 & -1 & 0 & 0 \\
+			-0.5 & -1 & 0 & 0 & 0 \\
+			-0.4 & -1 & 0 & 0 & 0 \\
+			0.4 & 0 & 0 & 1 & 0 \\
+			0.5 & 0 & 0 & 1 & 0 \\
+			0.6 & 0 & 1 & 1 & 0 \\
+			1.4 & 1 & 1 & 2 & 1 \\
+			1.5 & 1 & 2 & 2 & 1 \\
+			1.6 & 1 & 2 & 2 & 1 \\
+			\hline
 		\end{tabular}
 	\end{center}
 \end{frame}
