161012: fix some bugs in 01-int-*

--- a/161012/01-int-04-order.tex
+++ b/161012/01-int-04-order.tex
@@ -54,7 +54,7 @@
 			\hline
 			\multicolumn{4}{|c|}{Адрес} & Значение \\
 			& 2 & 3 & & \\\hline
-			\dots & \t{0000 0001} & \t{0000 0011} & \dots & $\t{0000~00\textbf{01}~0000~00\textbf{11}}_2=769_{10}$ \\
+			\dots & \t{0000 0001} & \t{0000 0011} & \dots & $\t{0000~00\textbf{01}~0000~00\textbf{11}}_2=259_{10}$ \\
 			\hline
 		\end{tabular}
 	\end{center}
@@ -80,7 +80,7 @@
 			\hline
 			\multicolumn{4}{|c|}{Адрес} & Значение \\
 			& 2 & 3 & & \\\hline
-			\dots & \t{0000 0001} & \t{0000 0011} & \dots & $\t{0000~00\textbf{11}~0000~00\textbf{01}}_2=259_{10}$ \\
+			\dots & \t{0000 0001} & \t{0000 0011} & \dots & $\t{0000~00\textbf{11}~0000~00\textbf{01}}_2=769_{10}$ \\
 			\hline
 		\end{tabular}
 	\end{center}
@@ -90,7 +90,7 @@
 			\hline
 			\multicolumn{4}{|c|}{Адрес} & Значение \\
 			& \textbf{3} & \textbf{2} & & \\\hline
-			\dots & \t{0000 0011} & \t{0000 0001} & \dots & $\t{0000~0011~0000~0001}_2=259_{10}$ \\
+			\dots & \t{0000 0011} & \t{0000 0001} & \dots & $\t{0000~0011~0000~0001}_2=769_{10}$ \\
 			\hline
 		\end{tabular}
 	\end{center}
@@ -100,18 +100,18 @@
 \begin{frame}{Особенности Little-endian-1}
 	Можно почти безболезненно конвертировать между типами:
 	\begin{center}
-		\begin{tabular}{|c|c|c|c|l|l|}
+		\begin{tabular}{|c|c|c|c|r|l|}
 			\hline
 			\multicolumn{4}{|c|}{Адрес} & \multicolumn{2}{|c|}{Значение} \\
 			& 2 & 3 & & & \\\hline
-			\dots & \t{0000 0011} & \t{0000 0001} & \dots & $\t{0000~0011~0000~0001}_2$ & $259_{10}$ \\
-			\dots & \t{0000 0011} & \dots         & \dots & $\t{0000~0011}_2$           & $3_{10}$ \\
-			\dots & \t{0000 0101} & \t{0000 0000} & \dots & $\t{0000~0000~0000~0001}_2$ & $5_{10}$ \\
-			\dots & \t{0000 0101} & \dots         & \dots & $\t{0000~0001}_2$           & $5_{10}$ \\
-			\dots & \t{1111 0011} & \t{0000 0000} & \dots & $\t{0000~0000 1111 0011}_2$ & $123_{10}$ \\
-			\dots & \t{1111 0011} & \dots         & \dots & $\t{1111~0011}_2$           & $123_{10}$ \\
-			\dots & \t{1111 0011} & \dots         & \dots & $\t{1111~0011}_2$           & $-133_{10}$ \\
-			\dots & \t{1111 0011} & \t{1111 1111} & \dots & $\t{1111~1111~1111~0011}_2$ & $-133_{10}$ \\
+			\dots & \t{0000 0011} & \t{0000 0001} & \dots & $\t{0000~0001~0000~0011}_2$ & $259_{10}$ \\
+			\dots & \t{0000 0011} & \dots         & \dots & $\t{0000~0001}_2$           & $3_{10}$ \\
+			\dots & \t{0000 0101} & \t{0000 0000} & \dots & $\t{0000~0000~0000~0101}_2$ & $5_{10}$ \\
+			\dots & \t{0000 0101} & \dots         & \dots & $\t{0000~0101}_2$           & $5_{10}$ \\
+			\dots & \t{1111 0011} & \t{0000 0000} & \dots & $\t{0000~0000~1111~0011}_2$ & $243_{10}$ \\
+			\dots & \t{1111 0011} & \dots         & \dots & $\t{1111~0011}_2$           & $243_{10}$ \\
+			\dots & \t{1111 0011} & \dots         & \dots & $\t{1111~0011}_2$           & $-13_{10}$ \\
+			\dots & \t{1111 0011} & \t{1111 1111} & \dots & $\t{1111~1111~1111~0011}_2$ & $-13_{10}$ \\
 			\hline
 		\end{tabular}
 	\end{center}
