161012: fix some bugs in 02-* and add more info about denormalized

--- a/161012/02-real-01-intro.tex
+++ b/161012/02-real-01-intro.tex
@@ -59,7 +59,7 @@
 		\item
 			Умножение и деление остались примерно такими же по сложности, а вот сложение и вычитание усложнились (надо сравнивать порядок чисел).
 		\item
-			Теперь можно делать вычисления числами любого порядка, и будем знать порядок ответа и первые сколько-то цифр.
+			Теперь можно делать вычисления с числами любого порядка, и будем знать порядок ответа и первые сколько-то цифр.
 	\end{itemize}
 	Плюсы:
 	\begin{itemize}
@@ -82,9 +82,9 @@
 	Например:
 	\begin{align*}
 		12.3 &= 123 \cdot 10^{-1} \\
-		321000 &= 321 \cdot 10^3 \\
-		12.3 \cdot 321000 &= 123 \cdot 10^{-1} \cdot 321 \cdot 10^3 = (123 \cdot 321) \cdot 10^{-1+3} = 39483 \cdot 10^2 \\
-		12.3 + 321000 &= 123 \cdot 10^{-1} + 321 \cdot 10^3 = (123 + \underbrace{3210000}_{>32767}) \cdot 10^{-1}
+		231000 &= 231 \cdot 10^3 \\
+		12.3 \cdot 231000 &= 123 \cdot 10^{-1} \cdot 231 \cdot 10^3 = (123 \cdot 231) \cdot 10^{-1+3} = 28413 \cdot 10^2 \\
+		12.3 + 231000 &= 123 \cdot 10^{-1} + 231 \cdot 10^3 = (123 + \underbrace{2310000}_{>>32767}) \cdot 10^{-1}
 	\end{align*}
 \end{frame}
 
@@ -114,7 +114,7 @@
 		0.75_{10} &= {0.11}_{2} \\
 		7 \cdot 10^{-1} + 5 \cdot 10^{-2} &= 2^{-1} + 2^{-2} \\
 		0.1_{10} &= {0.000110011001100110011001101\dots}_{2} \\
-		10^{-1} &= 2^{-4} + 2^{-5} + 2^{-7} + 2{^-8} + \dots \\
+		10^{-1} &= 2^{-4} + 2^{-5} + 2^{-7} + 2^{-8} + \dots \\
 	\end{align*}
 \end{frame}
 
@@ -124,14 +124,16 @@
 			Введите в Python:
 \begin{minted}{python}
 x=0.1
+print(x)
 print(format(x, ".1000f"))
 \end{minted}
 		\item
 			Убедитесь, что вы не получили \t{0.1}
 		\item
 			Найдите, на какую степень двойки надо домножить $x$, чтобы он стал целым.
+			По сути "--- грубое приближение числа знаков в мантиссе.
 	\end{itemize}
 	\pause
 	Ответ: на $2^{55}$.
-	Из этого можно сделать вывод, что в качестве экспоненты взяли $-55$.
+	Из этого можно сделать вывод, что в мантиссе порядка $55$ знаков.
 \end{frame}
