--- a/161012/02-real-02-ieee.tex
+++ b/161012/02-real-02-ieee.tex
@@ -41,8 +41,10 @@
 		\item
 			Мантисса хранит все знаки \textit{строго после} этой единицы.
 		\item
+			Если $e=0$, то у нас число вида \t{1.1001010010} в двоичной записи (до запятой "--- ровно одна единица).
+		\item
 			Итоговая формула (для \textit{нормализованных} чисел):
-			\[ x = (-1)^s \cdot 2^{e-127} \cdot (1 + m \cdot 2^{-23}) \]
+			\[ x = (-1)^s \cdot 2^{e} \cdot (1 + m \cdot 2^{-23}) \]
 	\end{enumerate}
 \end{frame}
 
@@ -67,19 +69,20 @@
 
 \begin{frame}{Пример}
 	\[
-		x = -13.75_{10} = \frac{-220}{16} = -1101.110_2
+		x = -13.75_{10} = \frac{-220}{16} = -1101.1100_2
 	\]
 	Подбираем экспоненту так, чтобы слева получилась ровно одна единица:
-	\[
-		x = -1.\underbrace{101110_2}_{m'=92_{10}} \cdot 2^3 \quad e=3
-	\]
-	Так как в $m$ предполагается 23 значащих знака (а у нас в $m'$ только 6), надо дописать \textit{справа} нулей.
+	\begin{align*}
+		x &= -1.\underbrace{1011100_2}_{m'=184_{10}} \cdot 2^3 = \quad e=3 \\
+		  &= -1.\underbrace{10111000000000000000000_2}_{m} \cdot 2^3
+	\end{align*}
+	Так как в $m$ предполагается 23 значащих знака (а у нас в $m'$ только 7), надо дописать \textit{справа} нулей.
 	Итого:
 	\begin{center}
 		\begin{tabular}{c|c|c}
 			\multicolumn{3}{c}{Биты} \\
 			31 & 30-23 & 22-0 \\\hline
-			\t{1} & $\underbrace{\t{100~0001~0}}_{e+128}$ & $\underbrace{\t{\textbf{101~110}0~0000~0000~0000~0000}}_{m}$ \\
+			\t{1} & $\underbrace{\t{100~0001~0}}_{e+127}$ & $\underbrace{\t{\textbf{101~110}0~0000~0000~0000~0000}}_{m}$ \\
 		\end{tabular}
 	\end{center}	
 \end{frame}
@@ -111,9 +114,15 @@
 		\item
 			Теперь стандарт гарантирует, что $x - y = 0 \iff x = y$.
 		\item
-			Денормализованное число "--- это число с минимально возможной экспонентой, у которого отсутствует единица перед запятой.
+			Денормализованное число "--- это число с минимально возможной экспонентой, у которого отсутствует единица перед запятой:
+			\begin{center}
+				\begin{tabular}{r|r}
+					Нормализованные   & $\t{\textbf{1}.\overbrace {0010011}^{m}} \cdot 2^{e=4}$ \\\hline
+					Денормализованные & $\t{\textbf{0}.\underbrace{10010011}_{m}} \cdot 2^{e=5}$ \\
+				\end{tabular}
+			\end{center}
 		\item
-			Получаем, что это просто $2^{23}$ чисел равномерно распределённых от 0 до 1.
+			Это просто $2^{23}$ чисел, равномерно распределённых от 0 до минимального нормализованного.
 		\item
 			Всё равно можно получить underflow:
 \begin{minted}{python}
