Adjust overfull hbox in 02-real-01-intro

--- a/161012/02-real-01-intro.tex
+++ b/161012/02-real-01-intro.tex
@@ -107,8 +107,9 @@
 	\begin{itemize}
 		\item Теперь стало легко и складывать, и перемножать, так как при домножении на двойку легко понять, сколько цифр не нужны.
 		\item Можно реализовать в железе.
-		\item Появились проблемы с тем, что нет чёткого соответствия между десятичными знаками после запятой и двоичными.
-		\item Отсюда трудности с точным хранением:
+		\item
+			Проблемы с тем, что нет чёткого соответствия между десятичными знаками после запятой и двоичными,
+			нет точности:
 	\end{itemize}
 	\begin{align*}
 		0.75_{10} &= {0.11}_{2} \\
