161019: add info about Windows to 02-pthread-01-simple.tex

--- a/161019/02-pthread-01-simple.tex
+++ b/161019/02-pthread-01-simple.tex
@@ -107,6 +107,19 @@ data is 1244
 	\end{itemize}
 \end{frame}
 
+\begin{frame}{В других системах}
+	\begin{itemize}
+		\item Joinable/detached также используется в Java.
+		\item В Windows (не в pthread под Windows!) другая концепция:
+			\begin{itemize}
+				\item Указатель на поток "--- сложный объект, который надо запрашивать у ОС и освобождать (как \t{FILE*}), а не просто переменная.
+				\item Ресурсы потока освобождаются, когда он завершился и на него больше нет указателей.
+				\item Нет разделения joinable/detached.
+				\item Если кто-то может спросить состояние потока "--- у него есть указатель, значит, ресурсы потока ещё не освобождены.
+			\end{itemize}
+	\end{itemize}
+\end{frame}
+
 \begin{frame}{Упражнение}
 	\begin{enumerate}
 		\item Измените код так, чтобы \t{data} стала глобальной переменной (после этого \t{arg} не нужен).
