161019/02-pthread-01-simple: adjust last exercise to thread-safe printf

--- a/161019/02-pthread-01-simple.tex
+++ b/161019/02-pthread-01-simple.tex
@@ -132,7 +132,7 @@ data is 1244
 		\item Вызовите \t{pthread\_detach} на втором потоке после запуска.
 		\item Убедитесь, что программа упала.
 		\item Уберите вызов \t{pthread\_join}.
-		\item Удивитесь странному порядку символов в выводе и уберите \t{printf} из основного потока.
+		\item Если выводится чушь "--- уберите \t{printf} из основного потока.
 		\item Убедитесь, что второй поток не всегда успевает отработать.
 		\item Добавьте вызов \t{pthread\_exit} в \t{main}.
 		\item Убедитесь, что после приложение перестало закрываться до окончания работы всех потоков.
