161019: some minor reformatting and bug fixes

--- a/161019/01-intro-02-how.tex
+++ b/161019/01-intro-02-how.tex
@@ -24,10 +24,9 @@ for (int x = 0; x != 0; x = f(x)); steps++;
 \begin{frame}{Иллюстрация}
 	\begin{center}
 		\includegraphics[height=6cm]{cpus-joke.jpg}
+
+		Простое добавление ядер не увеличивает производительность!
 	\end{center}
-	\begin{itemize}
-		\item Простое добавление ядер не увеличивает производительность!
-	\end{itemize}
 \end{frame}
 
 \begin{frame}{В прикладном хозяйстве}
