--- a/161019/02-pthread-01-simple.tex
+++ b/161019/02-pthread-01-simple.tex
@@ -58,7 +58,7 @@ int main(void) {
 	\begin{enumerate}
 		\item Качаем решение с \href{https://github.com/yeputons/fall-2016-paradigms/raw/master/161019/sources/01-simple.c}{GitHub}.
 		\item \texttt{gcc 01-simple.c -o 01-simple -Wall -Wextra -Werror} или аналог в вашей IDE.
-		\item \texttt{./a}
+		\item \texttt{./01-simple}
 		\item Ожидаемый вывод:
 \begin{verbatim}
 Hello from thread! arg=1234
