161019: rename 02-pthread-01-simple to 02-practice-01-simple

--- a/161019/02-practice-01-simple.tex
+++ b/161019/02-practice-01-simple.tex
@@ -1,11 +1,11 @@
-\section{pthread}
-\subsection{Простое приложение}
+\section{Практические грабли}
+\subsection{Простое приложение на pthread}
 
 \begin{frame}
 	\tableofcontents[currentsection,currentsubsection]
 \end{frame}
 
-\begin{frame}{Что такое pthreads}
+\begin{frame}{Что такое pthread}
 	\begin{itemize}
 		\item Стандартный интерфейса функций для работы с потоками (POSIX Threads).
 		\item Есть реализации под Windows, Linux и другие ОС.
@@ -96,7 +96,7 @@ data is 1244
 \end{frame}
 
 \begin{frame}{Кто освобождает ресурсы?}
-	На самом деле в pthreads есть два типа потоков: joinable и detached.
+	На самом деле в pthread есть два типа потоков: joinable и detached.
 
 	Joinable:
 	\begin{itemize}
