161012: fix NaN representation (sign can be arbitrary)

--- a/161012/02-real-02-ieee.tex
+++ b/161012/02-real-02-ieee.tex
@@ -170,7 +170,7 @@ print(x, x / 2 * 2)
 			31 & 30-23 & 22-0 & Значение \\\hline
 			\t{0} & \t{111 1111 1} & \t{000 0000 0000 0000 0000 0000} & $+\infty $\\
 			\t{1} & \t{111 1111 1} & \t{000 0000 0000 0000 0000 0000} & $-\infty $\\
-			\t{0} & \t{111 1111 1} & не нули                          & \t{NaN} \\
+			\t{?} & \t{111 1111 1} & не нули                          & \t{NaN} \\
 			\t{0} & \t{000 0000 0} & \t{000 0000 0000 0000 0000 0000} & $+0$ \\
 			\t{1} & \t{000 0000 0} & \t{000 0000 0000 0000 0000 0000} & $-0$ \\
 			\t{?} & \t{000 0000 0} & не нули                          & д. число \\
