161019: add draft of 02-practice-03-mutex

--- a/161019/161019.tex
+++ b/161019/161019.tex
@@ -37,5 +37,6 @@
 \input{01-intro-02-how}
 \input{02-practice-01-simple}
 \input{02-practice-02-race}
+\input{02-practice-03-mutex}
 
 \end{document}
